[gd_scene load_steps=6 format=3 uid="uid://lc73vi3no3ds"]

[ext_resource type="Script" uid="uid://dup1phb1g4jil" path="res://src/scripts/singletones/ui/hud.gd" id="1_73mis"]
[ext_resource type="Texture2D" uid="uid://dhpw53bcyd56y" path="res://src/assets/images/ui/Ribbon_Yellow_3Slides.png" id="2_5rf6w"]
[ext_resource type="Texture2D" uid="uid://bxwcg7x5jtdfd" path="res://src/assets/images/ui/Ribbon_Red_Connection_Down.png" id="3_gnm52"]
[ext_resource type="Texture2D" uid="uid://bddwyqce0yikw" path="res://src/assets/images/ui/Ribbon_Red_3Slides.png" id="4_vbbbt"]
[ext_resource type="Texture2D" uid="uid://ccv8fxo3nit4a" path="res://src/assets/images/ui/Ribbon_Yellow_Connection_Down.png" id="5_ueh7f"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_73mis")
metadata/_custom_type_script = "uid://dup1phb1g4jil"

[node name="Title" type="Node2D" parent="."]
position = Vector2(480, 64)

[node name="TitleTexture" type="NinePatchRect" parent="Title"]
anchors_preset = -1
anchor_left = 0.366667
anchor_top = 0.0357143
anchor_right = 0.586458
anchor_bottom = 0.111607
offset_left = -136.0
offset_top = -28.0
offset_right = 136.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5rf6w")
patch_margin_left = 84
patch_margin_top = 10
patch_margin_right = 84
patch_margin_bottom = 26

[node name="TitleLabel" type="RichTextLabel" parent="Title"]
offset_left = -480.0
offset_top = -11.0
offset_right = 480.0
offset_bottom = 14.0
theme_override_colors/default_color = Color(0.0862745, 0.109804, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0.517337, 0.477196, 0.17946, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_offset_x = -1
bbcode_enabled = true
text = "Nivel"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1

[node name="Errors" type="Node2D" parent="."]
position = Vector2(416, 832)

[node name="ErrorTexture" type="TextureRect" parent="Errors"]
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("3_gnm52")

[node name="ErrorLabel" type="RichTextLabel" parent="Errors"]
offset_left = -32.0
offset_top = -27.0
offset_right = 32.0
offset_bottom = 37.0
theme_override_colors/default_color = Color(0.219608, 0.109804, 0.180392, 1)
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "0"
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1

[node name="ErrorTitle" type="RichTextLabel" parent="Errors"]
offset_left = -32.0
offset_top = -52.0
offset_right = 32.0
offset_bottom = 32.0
theme_override_colors/default_color = Color(0.219608, 0.109804, 0.180392, 1)
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "erros"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1

[node name="Time" type="Node2D" parent="."]
position = Vector2(480, 108)

[node name="TimeTexture" type="TextureRect" parent="Time"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -25.0
offset_right = 77.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vbbbt")
expand_mode = 1

[node name="TimeLabel" type="RichTextLabel" parent="Time"]
self_modulate = Color(1, 1, 1, 0.662745)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -24.0
offset_right = 32.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
theme_override_colors/default_color = Color(0.0862745, 0.109804, 0.180392, 1)
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "0"
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1

[node name="Touchs" type="Node2D" parent="."]
position = Vector2(544, 832)

[node name="TouchsTexture" type="NinePatchRect" parent="Touchs"]
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("5_ueh7f")

[node name="TouchsTitle" type="RichTextLabel" parent="Touchs"]
offset_left = -32.0
offset_top = -53.0
offset_right = 32.0
offset_bottom = 32.0
theme_override_colors/default_color = Color(0.729412, 0.705882, 0.321569, 1)
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "toques"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1

[node name="TouchsLabel" type="RichTextLabel" parent="Touchs"]
offset_left = -31.0
offset_top = -29.0
offset_right = 33.0
offset_bottom = 35.0
pivot_offset = Vector2(32, 32)
theme_override_colors/default_color = Color(0.219608, 0.109804, 0.180392, 1)
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "0"
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
